Fri Oct 29 07:25:44 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.h (pipeline_install_post_fork): Clarify that this is
	  run in the child process.
	  (pipeline_wait_all): Clarify that SIGPIPE is considered equivalent
	  to exiting zero.

Fri Oct 29 06:18:31 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipecmd_new_sequencev): New function.
	  (pipecmd_new_sequence): Rewrite in terms of pipecmd_new_sequence.
	  (pipeline_new_command_argv): New function.
	  (pipeline_new_command_args): Rewrite in terms of
	  pipeline_new_command_argv.
	  (pipeline_command_argv): New function.
	  (pipeline_command_args): Rewrite in terms of
	  pipeline_command_argv.
	* lib/pipeline.h (pipecmd_new_sequencev, pipeline_new_command_argv,
	  pipeline_command_argv): Add prototypes.

Fri Oct 29 05:28:33 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_wait): Rename to ...
	  (pipeline_wait_all): ... this.  Return 127 rather than 1 if
	  closing the pipeline output fails.  Return 127 if a command other
	  than the last one fails.  Return the statuses and the number of
	  statuses in new output parameters if they are non-NULL.
	  (pipeline_wait): Add new wrapper function.
	* lib/pipeline.h (pipeline_wait_all): Add prototype.

Fri Oct 29 03:50:16 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_new): Default ignore_signals to 0.
	* lib/decompress.c (decompress_open, decompress_fdopen): Remove
	  redundant calls to pipeline_ignore_signals.
	* src/man.c (make_browser): Explicitly ignore SIGINT and SIGQUIT
	  when running the browser.
	  (make_display_command): Explicitly ignore SIGINT and SIGQUIT when
	  running the pager.

Fri Oct 29 03:28:57 BST 2010  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c, lib/pipeline.h: Rename command to pipecmd,
	  command_* to pipecmd_*, and COMMAND_* to PIPECMD_*.  Update all
	  callers.

Fri Oct 29 03:24:10 BST 2010  Colin Watson  <cjwatson@debian.org>
